# NYC-Taxi-Fare-Prediction

./: .dvcignore  .gitignore  LICENSE  Makefile  README.md  data.dvc  dvc.yaml  models.dvc  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: build.yaml
docs/: mkdocs.yml
docs/docs/: index.md
src/: config.py  dataset.py  features.py  plots.py  utils.py
src/modeling/: predict.py  train.py
