[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "MLOPs project on NYC Taxi Fare Prediction"
authors = [
  { name = "Debmalya Sett" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
src = { workspace = true }

[dependency-groups]
dev = [
    "dvc>=3.65.0",
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "scikit-learn>=1.7.2",
    "src",
    "tqdm>=4.67.1",
    "typer>=0.21.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.2",
]

